[package]
name = "compliance_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
aruna-rust-api = "2.0.0-beta.9"
async-trait = "0.1.74"
chrono = "0.4.31"
diesel-ulid = "0.3.1"
dotenvy = "0.15.7"
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
reqwest = {version = "0.11.22", features = ["blocking"]}
serde = {version = "1.0.190", features = ["derive"]}
serde_json = {version = "1.0.108", features = ["raw_value"]}
tokio = {version = "1.34.0", features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter", "time"]}
url = "2.5.0"
